// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box \`bg\` prop sets background color 1`] = `
.c0 {
  background-color: #191f00;
}

<div
  className="c0"
/>
`;

exports[`Box \`color\` prop sets color 1`] = `
.c0 {
  color: #3087B7;
}

<div
  className="c0"
  color="blue.5"
/>
`;

exports[`Box \`m\` prop sets margin 1`] = `
.c0 {
  margin: 8px;
}

<div
  className="c0"
/>
`;

exports[`Box \`p\` prop sets padding 1`] = `
.c0 {
  padding: 8px;
}

<div
  className="c0"
/>
`;

exports[`Box \`size\` prop sets width and height 1`] = `
.c0 {
  width: 40px;
  height: 40px;
}

<div
  className="c0"
  size={40}
/>
`;

exports[`Box \`width\` prop sets width 1`] = `
.c0 {
  width: 50%;
}

<div
  className="c0"
  width={0.5}
/>
`;

exports[`Box matches the snapshot 1`] = `
<div
  className=""
/>
`;
